Writterside documentation + Initial_resources script + gitignore update

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -28,7 +28,7 @@ remote_user = ansible
 #action_plugins = plugins/action
 
 # improve output format (with line return)
-stdout_callback = debug
+; stdout_callback = debug
 
 # ignore files directory
 #inventory_ignore_patterns = files
