--- a/Update_upgrade.yml
+++ b/Update_upgrade.yml
@@ -1,5 +1,5 @@
 ---
-# run the playbook: 'ansible-playbook Bash_aliases.yml -vvv'  
+# run the playbook: 'ansible-playbook Update_upgrade.yml -vvv'  
 # run the playbook at the same level than ansible.cfg
 # MIT License: https://mit-license.org/
 # The purpose of this playbook is to update and upgrade the system to ensure it is up-to-date
