--- a/Common_passwords.yml
+++ b/Common_passwords.yml
@@ -1,5 +1,5 @@
 ---
-# run the playbook: 'ansible-playbook Bash_aliases.yml -vvv'  
+# run the playbook: 'ansible-playbook Common_passwords.yml -vvv'  
 # run the playbook at the same level than ansible.cfg
 # MIT License: https://mit-license.org/
 # The purpose of this playbook is to configure password settings
