--- a/Libpam.yml
+++ b/Libpam.yml
@@ -1,5 +1,5 @@
 ---
-# run the playbook: 'ansible-playbook Bash_aliases.yml -vvv'  
+# run the playbook: 'ansible-playbook Libpam.yml -vvv'  
 # run the playbook at the same level than ansible.cfg
 # MIT License: https://mit-license.org/
 # Add the PAM (Pluggable Authentication Modules) to the system
