--- a/Bash_aliases.yml
+++ b/Bash_aliases.yml
@@ -4,8 +4,8 @@
 # MIT License: https://mit-license.org/
 # The purpose of this playbook is to create a .bash_aliases to prompt with a linuxlogo.
 - hosts: all
-  vars_files:
-    - vars.yml
+#  vars_files:
+#    - vars.yml
   tasks:
     - name: Install linuxlogo package
       apt:
