--- a/Initial_resources.yml
+++ b/Initial_resources.yml
@@ -4,8 +4,8 @@
 # MIT License: https://mit-license.org/
 - name: Initial Resources
   hosts: all
-  vars_files:
-    - vars.yml
+#  vars_files:
+#    - vars.yml
   tasks:
     - name: Create destination directory
       ansible.builtin.file:
